# grid-data-models

./: .buildinfo  .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  genindex.html  index.html  install.html  installation.html  intro.html  new_features.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml
.github/workflows/: deploy.yml  gh-pages.yml  main_test.yaml  publish_to_pypi.yaml  publish_to_pypi.yml  pull_request_tests.yml
.github/workflows/ISSUE_TEMPLATE/: config.yml  feature.yml
_sources/: index.md.txt  install.md.txt  installation.ipynb  intro.md  new_features.ipynb
_sources/api/: distribution_branch.md.txt  distribution_bus.md.txt  distribution_capacitor.md.txt  distribution_component.md.txt  distribution_enum.md.txt  distribution_load.md.txt  distribution_transformer.md.txt  distribution_vsource.md.txt  distribution_wires.md.txt  index.md  index.md.txt  limitset.md.txt  quantities.md.txt
_sources/api/components/: distribution_battery.md  distribution_bus.md.txt  distribution_capacitor.md  distribution_feeder.md.txt  distribution_load.md.txt  distribution_recloser.md  distribution_regulator.md  distribution_solar.md  distribution_switch.md  distribution_vsource.md.txt
_sources/api/controllers/: capacitor_controllers.md  inverter_controllers.md.txt  regulator_controllers.md
_sources/api/equipment/: battery_equipment.md  capacitor_equipment.md.txt  distribution_wires.md.txt  fuse_equipment.md.txt  load_equipment.md.txt  recloser_equipment.md  solar_equipment.md.txt  switch_equipment.md  switch_equipment.md.txt  vsource_equipment.md
_sources/cim/: distribution-bus.md  distribution-bus.md.txt  index.md  index.md.txt
_sources/cli/: index.md.txt  reduce.md
_sources/dist_system/: graphs.ipynb  import_export.ipynb  network_reduction.ipynb  plotting.ipynb  tracked_changes.ipynb
_sources/gdm_intro/: data_models.ipynb  timeseries.ipynb  units.ipynb
_sources/gdmloader/: gdmloader.ipynb
_sources/usage/: gis_support.md.txt  index.md.txt
_sources/usage/components/: distribution_branch.md.txt  distribution_bus.md.txt  distribution_load.md.txt  (+1 more)
api/: distribution_branch.html  distribution_bus.html  distribution_capacitor.html  distribution_component.html  distribution_enum.html  distribution_load.html  distribution_transformer.html  distribution_vsource.html  distribution_wires.html  index.html  limitset.html  quantities.html
api/components/: distribution_battery.html  distribution_branch.html  distribution_bus.html  distribution_capacitor.html  distribution_feeder.html  distribution_fuse.html  distribution_load.html  distribution_recloser.html  distribution_regulator.html  distribution_solar.html  distribution_substation.html  distribution_switch.html  distribution_transformer.html  distribution_vsource.html
api/controllers/: capacitor_controllers.html  inverter_controllers.html  recloser_controllers.html  regulator_controllers.html  switch_controllers.html
api/equipment/: battery_equipment.html  branch_equipment.html  capacitor_equipment.html  distribution_transformer_equipment.html  distribution_wires.html  fuse_equipment.html  inverter_equipment.html  load_equipment.html  recloser_equipment.html  solar_equipment.html  switch_equipment.html  vsource_equipment.html
cim/: distribution-bus.html  index.html
cli/: index.html  reduce.html
dist_system/: graphs.html  import_export.html  network_reduction.html  plotting.html  tracked_changes.html
docs/: _config.yml  _toc.yml  conf.py  erdantic_schema_builder.py  index.md  install.md  models.md  new_features.ipynb
docs/api/: distribution_branch.md  distribution_bus.md  distribution_capacitor.md  distribution_component.md  distribution_enum.md  distribution_feeder.md  distribution_load.md  distribution_substation.md  distribution_transformer.md  distribution_transformer_equipment.md  distribution_vsource.md  distribution_wires.md  index.md  limitset.md  quantities.md
docs/cim/: distribution-bus.md  index.md
docs/cli/: index.md  reduce.md
docs/dist_system/: graphs.ipynb  import_export.ipynb  network_reduction.ipynb  plotting.ipynb  test.csv  test.geojson  test.json  tracked_changes.ipynb
docs/gdm_intro/: data_models.ipynb  time_series.ipynb  units.ipynb
docs/gdmloader/: gdmloader.ipynb
docs/temoral_models/: temporal_intro.md
docs/usage/: index.md  plotting_gdm.md
gdm_intro/: data_models.html  timeseries.html  units.html
gdmloader/: gdmloader.html
paper/: paper.bib  paper.md
src/gdm/: __init__.py  bus.py  capacitor.py  constants.py  exceptions.py  hashing_utils.py  load.py  quantities.py  temporal_models.py  time_travel.py  track_changes.py  tracked_changes.py  transformer.py  version.py
src/powersystem_data_models/: enums.py  node.py
temoral_models/: temporal_intro.html
tests/: __init__.py  conftest.py  dense.csv  dense_act.csv  dense_calc.csv  get_sample_system.py  sparse_act.csv  sparse_calc.csv  test.json  test_admittance_matrix.py  test_build_y_bus.py  test_cost_db.py  test_dataset.py  test_dataset_system.py  test_dist_graph.py  test_distribution_examples.py  test_distribution_graph.py  test_distribution_load.py  test_distribution_system.py  test_examples.py  test_impedence_calc.py  test_json_schema.py  test_model_gdf.geojson  test_node.py  test_plotting.py  test_quantity.py  test_serialize_deserialize.py  test_structural_examples.py  test_temporal_gdm_system.py  test_time_series.py  test_timeseries.py  test_tracked_changes.py  test_version_bump.py  test_version_management.py  test_voltage_source.py
tests/components/: test_distribution_bus.py
tests/data/: ckt_power_p5r.csv  ckt_power_p5r_no_cap.csv  p5r_pv.json
tests/dataset/: test_dataset_system.py
usage/: gis_support.html  index.html  plotting_gdm.html
usage/components/: distribution_branch.html  distribution_bus.html  distribution_load.html  distribution_regulator.html  distribution_transformer.html
usage/network_reduction/: model_reduction.html
usage/temporal_model/: overview.html
(+236 files in other folders)
