[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "powersystem-data-models"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "U.N. Owen", email = "void@some.where" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/unknown/powersystem-data-models#readme"
Issues = "https://github.com/unknown/powersystem-data-models/issues"
Source = "https://github.com/unknown/powersystem-data-models"

[tool.hatch.version]
path = "src/powersystem_data_models/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/powersystem_data_models tests}"

[tool.coverage.run]
source_pkgs = ["powersystem_data_models", "tests"]
branch = true
parallel = true
omit = [
  "src/powersystem_data_models/__about__.py",
]

[tool.coverage.paths]
powersystem_data_models = ["src/powersystem_data_models", "*/powersystem-data-models/src/powersystem_data_models"]
tests = ["tests", "*/powersystem-data-models/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
