[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gdm"
version = "0.0.1"
description = ''
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = []
authors = [{ name = "U.N. Owen", email = "void@some.where" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "rich",
  "networkx",
  "infrasys @ git+https://github.nrel.gov/CADET/infrastructure_systems.git",
]

[project.optional-dependencies]
dev = ["pre-commit", "pytest", "pytest-cov", "ruff"]
doc = ["sphinx", "sphinx-immaterial", "myst-parser"]

[project.urls]
Documentation = "https://github.com/unknown/powermodels#readme"
Issues = "https://github.com/unknown/powermodels/issues"
Source = "https://github.com/unknown/powermodels"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [".git", ".ruff_cache", ".venv", "_build", "build", "dist", "venv"]
ignore-init-module-imports = true
line-length = 99
indent-width = 4
target-version = "py311"


[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = [
  "C901", # McCabe complexity
  "E4",   # Subset of pycodestyle (E)
  "E7",
  "E9",
  "F",    # Pyflakes
  "W",    # pycodestyle warnings
]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"**/{tests,docs,tools}/*" = ["E402"]
